[gd_scene load_steps=13 format=3 uid="uid://dossusm1hrl70"]

[ext_resource type="Script" path="res://scripts/wing.gd" id="1_4kb4k"]
[ext_resource type="Material" uid="uid://bis4vno0br1qf" path="res://mats/red.tres" id="1_xqbg4"]
[ext_resource type="Material" uid="uid://dj8c8abta0f7j" path="res://mats/black.tres" id="2_0myko"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_d22j1"]
material = ExtResource("1_xqbg4")
radius = 0.05
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_631m1"]
material = ExtResource("1_xqbg4")
radius = 0.05
height = 0.7

[sub_resource type="CapsuleMesh" id="CapsuleMesh_f4eoo"]
material = ExtResource("1_xqbg4")
radius = 0.04
height = 0.6

[sub_resource type="CapsuleMesh" id="CapsuleMesh_yn4td"]
material = ExtResource("1_xqbg4")
radius = 0.03
height = 0.4

[sub_resource type="BoxMesh" id="BoxMesh_jwcdi"]
material = ExtResource("2_0myko")
size = Vector3(0.01, 0.35, 0.35)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_aexrv"]
material = ExtResource("1_xqbg4")
radius = 0.025
height = 0.25

[sub_resource type="BoxMesh" id="BoxMesh_o4pkn"]
material = ExtResource("2_0myko")
size = Vector3(0.01, 0.25, 0.2)

[sub_resource type="BoxMesh" id="BoxMesh_w5gcf"]
material = ExtResource("2_0myko")
size = Vector3(0.01, 0.55, 0.55)

[sub_resource type="BoxMesh" id="BoxMesh_x3g2u"]
material = ExtResource("2_0myko")
size = Vector3(0.01, 0.5, 0.35)

[node name="Wing" type="Node3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_4kb4k")

[node name="Focal" type="Node3D" parent="."]
transform = Transform3D(-0.866025, 0.5, 0, -0.5, -0.866025, 0, 0, 0, 1, 0, 0, 0)

[node name="Base" type="MeshInstance3D" parent="Focal"]
transform = Transform3D(1, 0, 0, 0, 0.996195, -0.0871557, 0, 0.0871557, 0.996195, 0, 0.2, 0.02)
mesh = SubResource("CapsuleMesh_d22j1")
skeleton = NodePath("../../..")

[node name="Focal" type="Node3D" parent="Focal/Base"]
transform = Transform3D(-0.5, -0.866025, 0, 0.866025, -0.5, 0, 0, 0, 1, 0, 0.2, 0)

[node name="Limb" type="MeshInstance3D" parent="Focal/Base/Focal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
mesh = SubResource("CapsuleMesh_631m1")
skeleton = NodePath("../../../..")

[node name="Focal" type="Node3D" parent="Focal/Base/Focal/Limb"]
transform = Transform3D(0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0, 1, 0, 0.3, 0)

[node name="ForeLimb" type="MeshInstance3D" parent="Focal/Base/Focal/Limb/Focal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
mesh = SubResource("CapsuleMesh_f4eoo")
skeleton = NodePath("../..")

[node name="Focal" type="Node3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb"]
transform = Transform3D(0.923879, 0.382683, 0, -0.382683, 0.923879, 0, 0, 0, 1, 0, 0.25, 0)

[node name="HandLimb" type="MeshInstance3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/Focal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
mesh = SubResource("CapsuleMesh_yn4td")
skeleton = NodePath("../..")

[node name="BladePivot" type="Node3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/Focal/HandLimb"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0)

[node name="Blade" type="MeshInstance3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/Focal/HandLimb/BladePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.02, 0, 0.175)
mesh = SubResource("BoxMesh_jwcdi")
skeleton = NodePath("../..")

[node name="Focal" type="Node3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/Focal/HandLimb"]
transform = Transform3D(0.923879, 0.382683, 0, -0.382683, 0.923879, 0, 0, 0, 1, 0, 0.15, 0)

[node name="HandLimb" type="MeshInstance3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/Focal/HandLimb/Focal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0)
mesh = SubResource("CapsuleMesh_aexrv")
skeleton = NodePath("../..")

[node name="BladePivot" type="Node3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/Focal/HandLimb/Focal/HandLimb"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0)

[node name="Blade" type="MeshInstance3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/Focal/HandLimb/Focal/HandLimb/BladePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)
mesh = SubResource("BoxMesh_o4pkn")
skeleton = NodePath("../..")

[node name="BladePivot" type="Node3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0)

[node name="Blade" type="MeshInstance3D" parent="Focal/Base/Focal/Limb/Focal/ForeLimb/BladePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.025, 0, 0.275)
mesh = SubResource("BoxMesh_w5gcf")
skeleton = NodePath("../..")

[node name="BladePivot" type="Node3D" parent="Focal/Base/Focal/Limb"]
transform = Transform3D(0.5, 0, 0.866025, 0, 1, 0, -0.866025, 0, 0.5, 0, 0, 0)

[node name="Blade" type="MeshInstance3D" parent="Focal/Base/Focal/Limb/BladePivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.175)
mesh = SubResource("BoxMesh_x3g2u")
skeleton = NodePath("../..")
